# llm-learning

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
notebooks/: 01-openai.ipynb  02-ollama.ipynb  03-function-calling.ipynb  04-agents.ipynb  104-agents.ipynb  http.py  pydantic_models.py  utils.py
notebooks/04-agents/: 01-agents-pydanticai.ipynb  01-agents-pydanticai.py  04-agents.ipynb
notebooks/05-agents-sql/: 01-agents-sql-langchain.ipynb  02-agents-sql-pydantic.ipynb  agents-sql.ipynb  download-nc-statutes.py
notebooks/06-multi-tool-agent/: multi-tool-agent.ipynb
notebooks/07-amazon-bedrock-sql-agent/: amazon-bedrock-sql-agent.ipynb
