[project]
name = "llm-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.4.7",
    "openai>=1.107.3",
    "pandas>=2.3.2",
    "psycopg>=3.2.10",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "openai-agents[litellm]>=0.3.1",
    "pydantic-ai>=1.0.10",
]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.0",
]
