[project]
name = "llm-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.4.7",
    "openai>=1.107.3",
    "pandas>=2.3.2",
    "psycopg>=3.2.10",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "ollama>=0.5.4",
    "llm>=0.27.1",
    "llm-ollama>=0.14.0",
    "openai-agents[litellm]>=0.3.1",
    "beautifulsoup4>=4.13.5",
    "lxml>=6.0.2",
    "sqlalchemy>=2.0.43",
    "langchain-community>=0.3.30",
    "langchain-ollama>=0.3.9",
    "langchain-openai>=0.3.34",
    "langgraph>=0.6.8",
    "pydantic-ai>=1.0.14",
]

[tool.ruff]
line-length = 60

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.0",
]
